--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
-    "start:dev": "node --watch src/server.js",
+    "start": "node src/server.js --mode producction",
+    "start:dev": "node --watch src/server.js --mode development",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "commander": "^12.1.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^6.0.7",
@@ -30,6 +31,7 @@
     "mongoose-paginate-v2": "^1.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts. 1",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
